# rusty-intervals-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  GRASP_REFACTORING.md  README.md  docker-compose.yml  lcov.info  rust-toolchain.toml
.github/skills/rust-repo-structure/: SKILL.md
.github/workflows/: ci.yml
crates/intervals_icu_client/: Cargo.toml
crates/intervals_icu_client/benches/: download_activity.rs
crates/intervals_icu_client/examples/: basic_client.rs  download_activity_file.rs  list_recent_activities.rs
crates/intervals_icu_client/src/: circuit_breaker.rs  config.rs  domains.rs  error.rs  http_client.rs  lib.rs  observability.rs  retry.rs  utils.rs  webhook.rs
crates/intervals_icu_client/src/domains/: workout.rs
crates/intervals_icu_client/src/traits/: activity.rs  athlete.rs  event.rs  fitness.rs  gear.rs  mod.rs  route.rs  sport_settings.rs  weather.rs  wellness.rs  workout.rs
crates/intervals_icu_client/tests/: apply_sport_settings.rs  best_efforts_nonstandard_stream.rs  best_efforts_stream_variants.rs  get_activities_around.rs  get_fitness_summary.rs  http_client_contract.rs  integration.rs  normalize.rs  power_curves_integration.rs  search_intervals.rs
crates/intervals_icu_mcp/: Cargo.toml  README.md
crates/intervals_icu_mcp/examples/: servers_http.rs
crates/intervals_icu_mcp/src/: auth.rs  auth_ui.rs  compact.rs  domains.rs  dynamic.rs  engines.rs  error.rs  event_id.rs  lib.rs  main.rs  metrics.rs  middleware.rs  prompts.rs  services.rs  state.rs  test_support.rs  test_utils.rs  tool_utils.rs  transforms.rs  types.rs
crates/intervals_icu_mcp/src/domains/: activity_analysis.rs  coach.rs  events.rs  fitness.rs  gear.rs  mod.rs  nutrition.rs  progress.rs  resources.rs  sport_settings.rs  wellness.rs  workout_validator.rs  workouts.rs
crates/intervals_icu_mcp/src/dynamic/: dispatch.rs  mod.rs  parser.rs  runtime.rs  types.rs
crates/intervals_icu_mcp/src/engines/: adaptation.rs  ade.rs  analysis.rs  analysis_audit.rs  analysis_fetch.rs  changepoint.rs  coach_guidance.rs  coach_metrics.rs  coach_metrics_constants.rs  constants.rs  cp_regression.rs  forecast.rs  mod.rs  planning.rs  progress_tracking.rs  race_readiness.rs  trail_execution.rs
crates/intervals_icu_mcp/src/intents/: error.rs  handlers.rs  idempotency.rs  mod.rs  router.rs  types.rs  utils.rs  validator.rs
crates/intervals_icu_mcp/src/intents/handlers/: analyze_race.rs  analyze_training.rs  assess_recovery.rs  compare_periods.rs  manage_gear.rs  manage_profile.rs  mod.rs  modify_training.rs  plan_training.rs  render.rs  track_progress.rs
crates/intervals_icu_mcp/src/intents/handlers/render/: analysis.rs  progress.rs
crates/intervals_icu_mcp/static/: maud-ui.css
crates/intervals_icu_mcp/tests/: auth_ui_test.rs  coach_intents_integration.rs  dispatch_tests.rs  dynamic_registry_tests.rs  e2e_http.rs  e2e_mcp_tools_call.rs  e2e_stdio.rs  http_mode_integration.rs  integration_tools.rs  main_initialization.rs  metrics_tests.rs  modify_training_integration.rs  profile_gear_intents_integration.rs  progress_tracking_integration.rs  prompts_integration.rs  resources_domain_integration.rs  snapshot_analyze_training.rs  test_helpers.rs  token_baseline.rs  unit_handlers.rs  wiremock_integration_tests.rs
docs/: SPEC.md
examples/: mcp_remote.json
examples/grafana/: intervals_icu_mcp_observability_dashboard.json
examples/vmagent/: intervals_icu_mcp_metrics.yml
