[workspace]
members = ["crates/intervals_icu_client", "crates/intervals_icu_mcp"]
resolver = "3"

[workspace.metadata]
name = "rusty-intervals-mcp"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
