[package]
name = "intervals_icu_client"
version = "1.0.1"
edition = "2024"
resolver = "3"

[lib]
name = "intervals_icu_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt"] }
reqwest = { version = "0.13.2", features = ["json", "gzip", "stream", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
async-trait = "0.1.89"
secrecy = "0.10.3"
rand = "0.10.0"
regex = "1.12.3"
hmac = "0.12.1"
schemars = "1.2.1"
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"
futures-util = "0.3.32"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
tracing = "0.1.44"

[dev-dependencies]
wiremock = "0.6.5"
tempfile = "3.26.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[bench]]
name = "download_activity"
harness = false
