[package]
name = "intervals_icu_client"
version = "2.9.1"
edition = "2024"
resolver = "3"

[lib]
name = "intervals_icu_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt"] }
reqwest = { version = "0.13.4", features = ["json", "gzip", "stream", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
async-trait = "0.1.89"
secrecy = "0.10.3"
rand = "0.10.1"
regex = "1.12.4"
hmac = "0.13"
schemars = "1.2.1"
sha2 = "0.11"
hex = "0.4.3"
base64 = "0.22.1"
futures-util = "0.3.32"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
tracing = "0.1.44"
metrics = "0.24.6"
tower = { version = "0.5.3", features = ["util"] }

[dev-dependencies]
wiremock = "0.6.5"
tempfile = "3.27.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[bench]]
name = "download_activity"
harness = false
