[package]
name = "intervals_icu_mcp"
version = "0.7.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
secrecy = "0.10.3"
schemars = "1.2.1"
rmcp = { version = "0.16.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }
intervals_icu_client = { path = "../intervals_icu_client" }
axum = { version = "0.8.8", features = ["macros"] }
hyper = "1.8.1"
metrics-exporter-prometheus = "0.18.1"
tracing = "0.1.44"
anyhow = "1.0.100"
thiserror = "2.0.18"
tower-http = "0.6.8"
uuid = { version = "1.20.0", features = ["v4"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.43"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
wiremock = "0.6.5"
rmcp = { version = "0.16.0", features = [
    "client",
    "transport-io",
    "transport-child-process",
] }
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "query"] }
once_cell = "1.21.3"
