[package]
name = "intervals_icu_mcp"
version = "2.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
secrecy = "0.10.3"
schemars = "1.2.1"
rmcp = { version = "1.2.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }
intervals_icu_client = { path = "../intervals_icu_client" }
axum = { version = "0.8.8", features = ["macros"] }
hyper = "1.8.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"
tracing = "0.1.44"
anyhow = "1.0.100"
tower-http = { version = "0.6.8", features = ["timeout"] }
uuid = { version = "1.21.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hkdf = "0.12.4"
hex = "0.4.3"
chrono = "0.4.44"
async-trait = "0.1.89"
thiserror = "2.0.18"
# JWT authentication for multi-tenant HTTP mode
jwt-simple = "0.12.14"
# AES-256-GCM for api_key encryption
aes-gcm = "0.10.3"
# Rate limiting for multi-tenant mode
tower_governor = "0.8.0"
# Base64 encoding
base64 = "0.22.1"
# GetRandom for nonce generation
getrandom = "0.4.2"
# HTTP body utilities
http-body-util = "0.1.3"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
wiremock = "0.6.5"
rmcp = { version = "1.2.0", features = [
    "client",
    "transport-io",
    "transport-child-process",
] }
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "query"] }
once_cell = "1.21.3"
tempfile = "3.27.0"
serial_test = "3.2"
