[package]
name = "intervals_icu_mcp"
version = "2.8.1"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
secrecy = "0.10.3"
schemars = "1.2.1"
rmcp = { version = "1.7.0", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }
intervals_icu_client = { path = "../intervals_icu_client" }
axum = { version = "0.8.9", features = ["macros"] }
hyper = "1.10.1"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
tracing = "0.1.44"
anyhow = "1.0.102"
tower-http = { version = "0.6.11", features = ["timeout"] }
uuid = { version = "1.23.2", features = ["v4"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
hmac = "0.13"
sha2 = "0.11"
hkdf = "0.13"
hex = "0.4.3"
chrono = "0.4.44"
async-trait = "0.1.89"
thiserror = "2.0.18"
# JWT authentication for multi-tenant HTTP mode
jwt-simple = "0.12.16"
# Server-rendered HTML UI
maud = { version = "0.27", features = ["axum"] }
maud-ui = "0.2.1"
# URL parsing for query parameter encoding
url = "2.5.8"
# AES-256-GCM for api_key encryption
aes-gcm = "0.10.3"
# Rate limiting for multi-tenant mode
tower_governor = "0.8.0"
# Base64 encoding
base64 = "0.22.1"
# GetRandom for nonce generation
getrandom = "0.4.2"
# HTTP body utilities
http-body-util = "0.1.3"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
wiremock = "0.6.5"
rmcp = { version = "1.7.0", features = [
    "client",
    "transport-io",
    "transport-child-process",
] }
async-trait = "0.1.89"
reqwest = { version = "0.13.4", features = ["json", "query", "form"] }
once_cell = "1.21.4"
tempfile = "3.27.0"
serial_test = "3.5.0"
